--- a/src/App.css
+++ b/src/App.css
@@ -685,11 +685,17 @@ body {
   display: none;
 }
 
-.Home, .About {
+.Home,
+.About,
+.Services,
+.Contact {
   width: 100%;
 }
 
-.Home .content__left, .About .content__left {
+.Home .content__left,
+.About .content__left,
+.Services .content__left,
+.Contact .content__left {
   position: absolute;
   z-index: 50;
   padding: 2rem;
@@ -702,6 +708,262 @@ body {
   border-right: 1px solid rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 15px 15px -1px rgba(0, 0, 0, 0.25);
           box-shadow: 0 15px 15px -1px rgba(0, 0, 0, 0.25);
+}
+
+/* --------------------------------------- About Section ---------------------------------------------- */
+.AboutSection {
+  position: relative;
+  margin-top: 150px;
+  margin-bottom: 100px;
+}
+
+.AboutSection__img img {
+  width: 100%;
+  height: 100%;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.AboutSection__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.space {
+  margin-top: 50px;
+}
+
+.AboutSection__card {
+  position: relative;
+  width: 100%;
+  height: 120%;
+  border: 1px solid #ddd;
+  padding: 2rem 1.5rem;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.AboutSection__card h3 {
+  color: #00467f;
+  margin-bottom: 20px;
+}
+
+.AboutSection__card .borderLine {
+  position: absolute;
+  top: 0;
+  left: 25%;
+  width: 50%;
+  height: 3px;
+  background-color: #f48200;
+}
+
+.AboutSection__card:hover {
+  cursor: pointer;
+  border-radius: 1px solid #000000;
+  -webkit-box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.25);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+/* --------------------------------------- Service Section ---------------------------------------------- */
+.ServicesSection {
+  margin-top: 150px;
+}
+
+.ServicesSection .services__price h3 {
+  text-align: center;
+  margin-bottom: 50px;
+  color: #00467f;
+}
+
+.ServicesSection .price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem;
+  padding: 1rem 0;
+  cursor: pointer;
+}
+
+.ServicesSection .price h5 {
+  margin-left: 1rem;
+}
+
+.ServicesSection .price:hover {
+  color: #f48200;
+}
+
+.ServicesSection .services__img {
+  width: 100%;
+  height: 100%;
+}
+
+.ServicesSection .services__img img {
+  width: 100%;
+  height: 100%;
+}
+
+.ServicesSection2 {
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+.ServicesSection2 h3 {
+  text-align: center;
+  margin-bottom: 50px;
+  color: #00467f;
+}
+
+.ServicesSection2 .ServicesSection2__container img {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.ServicesSection2 .ServicesSection2__container h5,
+.ServicesSection2 .ServicesSection2__container img {
+  margin-bottom: 15px;
+}
+
+.ServicesSection2 .ServicesSection2__container h5 {
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.ServicesSection2 .ServicesSection2__container h5:hover {
+  color: #f48200;
+  cursor: pointer;
+}
+
+/* --------------------------------------- Contact Section ---------------------------------------------- */
+.contactSection {
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+.contactSection h2 {
+  position: relative;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.contactSection h2:before {
+  position: absolute;
+  content: "";
+  top: 130%;
+  left: 0;
+  width: 30px;
+  height: 3px;
+  background-color: black;
+}
+
+.contactSection h4 {
+  color: grey;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.contactSection p {
+  margin-bottom: 2rem;
+  font-weight: 550;
+  font-size: 0.95rem;
+}
+
+.contactSection .contactSection__right .form-group {
+  margin-bottom: 1.5rem;
+}
+
+.contactSection .contactSection__right textarea {
+  width: 100%;
+  height: 100px;
+}
+
+.contactSection .contactSection__right button {
+  margin-top: 1rem;
+  color: white;
+  font-weight: bold;
+  font-size: 0.95rem;
+  text-align: center;
+  padding: 0.7rem 1.5rem 0.6rem;
+  border-radius: 6px;
+  border: 2px solid #f48200;
+  background-color: #f48200;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.contactSection .contactSection__right button:hover {
+  background: white;
+  color: #f48200;
+}
+
+/* --------------------------------------- Footer ---------------------------------------------- */
+.footer {
+  width: 100%;
+  height: 300px;
+  background-color: #171717;
+  color: #fff;
+}
+
+.footer .container {
+  width: 60%;
+  padding-top: 4rem;
+}
+
+.footer .row1 {
+  margin-bottom: 2rem;
+}
+
+.footer .footer__left {
+  text-align: center;
+  font-size: 0.95rem;
+}
+
+.footer .footer__left span {
+  margin-right: 1rem;
+}
+
+.footer .footer__right {
+  text-align: center;
+}
+
+.footer .footer__right i {
+  margin-left: 1rem;
+  cursor: pointer;
+}
+
+.footer .footer__right .group__icon1 {
+  margin-bottom: 1rem;
+}
+
+.footer .row2 {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+.footer .copyright {
+  text-align: center;
 }
 
 /* --------------------------------------- Media Query ---------------------------------------------- */
@@ -755,10 +1017,14 @@ body {
     -webkit-filter: brightness(85%);
             filter: brightness(85%);
   }
-  .About {
+  .About,
+  .Services,
+  .Contact {
     width: 100%;
   }
-  .About .content__left {
+  .About .content__left,
+  .Services .content__left,
+  .Contact .content__left {
     position: absolute;
     z-index: 50;
     padding: 2rem;
@@ -772,7 +1038,9 @@ body {
     -webkit-box-shadow: 0 15px 15px -1px rgba(0, 0, 0, 0.25);
             box-shadow: 0 15px 15px -1px rgba(0, 0, 0, 0.25);
   }
-  .About .content__right {
+  .About .content__right,
+  .Services .content__right,
+  .Contact .content__right {
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -781,11 +1049,15 @@ body {
     -webkit-transition: all 1s;
     transition: all 1s;
   }
-  .About .transition1 {
+  .About .transition1,
+  .Services .transition1,
+  .Contact .transition1 {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
-  .About .transition2 {
+  .About .transition2,
+  .Services .transition2,
+  .Contact .transition2 {
     -webkit-transform: translateX(75%);
             transform: translateX(75%);
     background: grey;
@@ -919,6 +1191,13 @@ body {
   .section6 .box p {
     font-size: 1rem;
     margin-bottom: 40px;
+  }
+  .AboutSection__card {
+    width: 90%;
+    margin-bottom: 2rem;
+  }
+  .AboutContainer {
+    margin-bottom: 6rem;
   }
 }
 /*# sourceMappingURL=App.css.map */
